@@ -1,5 +1,5 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.989 2011-04-28 02:27:12 guru Exp $
+	$Id: ChangeLog,v 1.990 2011-04-28 03:05:12 guru Exp $
 -----------------------------------------------------------------------------------------
 
 2011-04-27	pwessel
@@ -7,6 +7,8 @@
 	* spotter/grdrotater_func.c:	Ensure that output grid xmin/xmax honors the current
 				FORMAT_GEO_OUT range settings.
 	* mapproject_func.c:	Used GMT_IN instead of GMT_OUT in output format of longitudes.
+	*project_func.c:	Added modification -Gdist/lat to generate small circles of given
+				lat that goes through points set by -C and -E.
 
 2011-04-27	remko
 	* gmt_customio.c:	Now contains grid format descriptions and IDs.
